# xfce

./: README.md  xfce-build.sh
DOC/: build-order.txt  buildtime-dependencies.txt  instructions.txt
PKG32/apps/: galculator-2.1.3-i486-1jay.txz  gcolor2-0.4-i486-3jay.tgz  gigolo-0.4.2-i486-1jay.txz  gparted-0.19.1-i486-1jay.txz  gpicview-0.2.4-i486-1jay.tgz  lxdm-0.5.0-i486-1jay.txz  mousepad-0.3.0-i486-1jay.txz  slock-1.1-i486-1jay.tgz  volumeicon-0.4.6-i486-1jay.tgz  winff-1.5.1-i486-1ftm.xzm  xarchiver-0.5.3-i486-1jay.tgz
PKG32/apps/audacious/: audacious-3.6-i486-1jay.txz  audacious-plugins-3.6-i486-1jay.txz  mpg123-1.16.0-i486-1jay.txz  svgalib-1.9.25-i486-3jay.txz
PKG32/apps/epdfviewer/: epdfview-0.1.8-i486-2jay.txz  openjpeg-1.5.1-i486-1jay.tgz  poppler-0.26.3-i486-1jay.txz
PKG32/apps/mplayer/: MPlayer-r36573-i486-1ftm.tgz  gmtk-1.0.8-i486-1jay.tgz  gnome-mplayer-1.0.8-i486-1jay.tgz
PKG32/apps/networkmanager/: gnome-keyring-3.0.3-i486-1gv.xzm  libgnome-keyring-3.0.3-i486-1gv.xzm  libsecret-0.15-i486-1.txz  network-manager-applet-0.9.8.8-i486-1jay.txz
PKG32/apps/transmission/: openldap-client-2.4.39-i486-1jay.txz  transmission-2.60-i486-1jay.tgz
PKG32/apps/xfburn/: libburn-1.3.6-i486-1jay.tgz  libisofs-1.3.6-i486-1jay.tgz  (+1 more)
PKG32/dep/: at-spi2-atk-2.8.1-i486-1jay.txz  at-spi2-core-2.8.0-i486-1jay.txz  atkmm-2.22.7-i486-1jay.tgz  ca-certificates-20130906-noarch-1jay.txz  cairomm-1.10.0-i486-1jay.tgz  dconf-0.15.3-i486-1jay.txz  glibmm-2.36.2-i486-1jay.tgz  gnutls-3.1.16-i486-1jay.txz  gtkmm-2.24.4-i486-1jay.tgz  gtksourceview-2.10.5-i486-1jay.tgz  gvfs-1.16.4-i486-2jay.txz  libevent-2.0.21-i486-1jay.txz  libgtop-2.28.5-i486-1jay.txz  libsigc++-2.3.1-i486-1jay.txz  libsoup-2.44.2-i486-1jay.txz  libtasn1-3.3-i486-1.txz  libtool-2.4.2-i486-2.txz  libunique-1.1.6-i486-4jay.tgz  libwnck-2.31.0-i486-1jay.txz  libxklavier-5.3-i486-1jay.txz  media-player-info-17-noarch-1jay.txz  murrine-0.98.1.1-i486-1jay.tgz  nettle-2.7.1-i486-1jay.txz  p11-kit-0.16.4-i486-1jay.txz  pangomm-2.34.0-i686-1jay.txz  polkit-gnome-0.102-i486-1jay.txz  porteus-xfce-themes-noarch.xzm  sudo-1.8.6p8-i486-1.txz  udisks2-2.1.3-i486-1jay.txz  v4l-utils-0.9.5-i486-1jay.txz
PKG64/apps/: galculator-2.1.3-x86_64-1jay.txz  gcolor2-0.4-x86_64-3jay.tgz  gigolo-0.4.2-x86_64-1jay.txz  gparted-0.19.1-x86_64-1jay.txz  gpicview-0.2.4-x86_64-1jay.tgz  lxdm-0.5.0-x86_64-1jay.txz  mousepad-0.3.0-x86_64-1jay.txz  slock-1.1-x86_64-1jay.tgz  volumeicon-0.4.6-x86_64-1jay.tgz  xarchiver-0.5.3-x86_64-1jay.tgz
PKG64/dep/: at-spi2-atk-2.8.1-x86_64-1jay.txz  at-spi2-core-2.8.0-x86_64-1jay.txz  atkmm-2.22.7-x86_64-1jay.tgz  ca-certificates-20130906-noarch-1jay.txz  cairomm-1.10.0-x86_64-1jay.tgz  dconf-0.15.3-x86_64-1jay.txz  glibmm-2.36.2-x86_64-1jay.tgz  gnutls-3.1.16-x86_64-1.txz  gtkmm-2.24.4-x86_64-1jay.tgz  gtksourceview-2.10.5-x86_64-1jay.tgz  gvfs-1.16.4-x86_64-2jay.txz  libevent-2.0.21-x86_64-1jay.txz  libsigc++-2.3.1-x86_64-1jay.txz  libsoup-2.44.2-x86_64-1jay.txz  libtasn1-3.3-x86_64-1.txz  libtool-2.4.2-x86_64-2.txz  libunique-1.1.6-x86_64-4jay.tgz  libwnck-2.31.0-x86_64-1jay.txz  libxklavier-5.3-x86_64-1jay.txz  murrine-0.98.1.1-x86_64-1jay.tgz  p11-kit-0.16.4-x86_64-1jay.txz  pangomm-2.34.0-x86_64-1jay.txz  polkit-gnome-0.102-x86_64-1jay.txz  udisks2-2.1.3-x86_64-1jay.txz  v4l-utils-0.9.5-x86_64-1jay.txz
PKG64/xfce/: exo-0.10.2-x86_64-1jay.txz  garcon-0.3.0-x86_64-1jay.txz  gtk-xfce-engine-3.0.1-x86_64-1jay.txz  libxfce4ui-4.11.1-x86_64-1jay.txz  libxfce4util-4.11.0-x86_64-1jay.txz  thunar-1.6.3-x86_64-1jay.txz  thunar-archive-plugin-0.3.1-x86_64-1jay.tgz  thunar-volman-0.8.0-x86_64-1jay.txz  tumbler-0.1.30-x86_64-1jay.txz  xfce4-appfinder-4.11.0-x86_64-1jay.txz  xfce4-clipman-plugin-1.2.6-x86_64-1jay.txz  xfce4-cpufreq-plugin-1.1.0-x86_64-1jay.txz  xfce4-dev-tools-4.11.0-x86_64-1jay.txz  xfce4-mailwatch-plugin-1.2.0-x86_64-1jay.tgz  xfce4-mount-plugin-0.6.4-x86_64-1jay.txz  xfce4-mpc-plugin-0.4.3-x86_64-1jay.txz  xfce4-netload-plugin-1.2.0-x86_64-2jay.txz  xfce4-notifyd-0.2.4-x86_64-1jay.txz  xfce4-panel-4.11.1-x86_64-1jay.txz  xfce4-power-manager-1.4.1-x86_64-1jay.txz  xfce4-screenshooter-1.8.1-x86_64-1jay.txz  xfce4-session-4.11.0-x86_64-2jay.txz  xfce4-settings-4.11.1-x86_64-1jay.txz  xfce4-settings-4.11.3-x86_64-1jay.txz  xfce4-taskmanager-1.0.1-x86_64-1jay.txz  xfce4-terminal-0.6.3-x86_64-1jay.txz  xfce4-whiskermenu-plugin-1.3.2-x86_64-1jay.tgz  xfce4-xkb-plugin-0.7.0-x86_64-1jay.txz  xfconf-4.10.0-x86_64-1jay.txz  xfdesktop-4.11.6-x86_64-1jay.txz  xfdesktop-4.11.8-x86_64-1jay.txz  xfwm4-4.11.1-x86_64-1jay.txz  xfwm4-4.11.2-x86_64-1jay.txz
SRC/app/: winff-1.5.1-x86_64-1ftm.xzm
SRC/dep/: gnsu-0.0.1-noarch-1gv.txz  p7zip-9.20.1-x86_64-1sl.txz  sudo-1.8.6p8-x86_64-1.txz
SRC/dep/polkit-gnome-105/polkit-gnome-0.105/: Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
SRC/dep/polkit-gnome-105/polkit-gnome-0.105/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  be.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  ml.po  mr.po  nb.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+14 more)
SRC/dep/polkit-gnome-105/polkit-gnome-0.105/src/: Makefile.am  Makefile.in  main.c  polkitgnomeauthenticationdialog.c  polkitgnomeauthenticationdialog.h  polkitgnomeauthenticator.c  polkitgnomeauthenticator.h  polkitgnomelistener.c  polkitgnomelistener.h
TREE/: launch_before_go_xfce.sh  xfce-icon-remove.txt
TREE/etc/rc.d/: rc.4
TREE/sbin/: showpart  udev-fstab-update
TREE/xfce-patches/: gnsu-porteus.diff  lxdm.diff  sudoers-porteus.diff  sudoers32-porteus.diff  sudoers64-porteus.diff
(+261 files in other folders)
